--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="log_out">Log Out</string>
 </resources>
