--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="register">Register</string>
     <string name="confirm_password">Confirm password</string>
     <string name="log_out">Log Out</string>
+    <string name="support">Support</string>
+    <string name="settings">Settings</string>
+    <string name="current_location">Location</string>
+    <string name="home">Home</string>
 </resources>
