--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">NS</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nsbot">NSBOT</string>
-    <string name="username">Username</string>
+    <string name="username">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="confirm_password">Confirm password</string>
     <string name="log_out">Log Out</string>
     <string name="support">Support</string>
-    <string name="notice">Notice : for faster testing purpose , I added a code to make auto sign out after only 5 seconds in case the user is inactive .</string>
+    <string name="notice">Notice : for faster testing purpose , I added a code to make auto sign out after only 3 seconds in case the user is inactive .</string>
     <string name="settings">Settings</string>
     <string name="sign_out">Are you sure you want to sign out ?</string>
     <string name="yes">Yes</string>
